--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "npx json-server server.json -p 3333 -w"
   },
   "dependencies": {
     "next": "9.5.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.7",
+    "@types/prismic-dom": "^2.1.1",
+    "@types/react": "^16.9.51",
+    "@types/styled-components": "^5.1.3",
+    "babel-plugin-styled-components": "^1.11.1",
+    "typescript": "^4.0.3"
   }
 }
