add enviroment variables

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,7 @@ API_URL=http://localhost:3333
 
 # Já essa ficará disponpivel também para o client (browser)
 
-NEXT_PUBLIC_API_URL=http://localhost:3333
+NEXT_PUBLIC_API_PRISMIC_URL=
+NEXT_PUBLIC_SITE_URL=http://localhost:3333
+
 
