--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "npx json-server server.json -p 3333 -w"
   },
   "dependencies": {
-    "next": "9.5.4",
+    "next": "^10.0.0",
     "prismic-dom": "^2.2.4",
     "prismic-javascript": "^3.0.2",
     "react": "16.13.1",
